--- a/src/styles/Details.module.css
+++ b/src/styles/Details.module.css
@@ -18,6 +18,7 @@
 }
 
 .text {
+  font-size: 1rem;
   margin-bottom: 2rem;
 }
 
@@ -35,10 +36,21 @@
   border-radius: 2rem;
 }
 
+.emailWrapper {
+  width: 100%;
+}
+
 .email {
-  margin-bottom: 0.8rem;
-  border: 2px solid hsl(223, 100%, 88%);
+  margin-bottom: 0.5rem;
+  border: 2px solid;
   color: hsl(0, 0%, 59%);
+}
+
+.errorMessage {
+  color: hsl(354, 100%, 66%);
+  font-size: 0.9rem;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .submit {
@@ -60,19 +72,36 @@
     font-size: 3rem;
   }
 
+  .text {
+    font-size: 1.2rem;
+  }
+
   .form {
     flex-direction: row;
     max-width: 650px;
     margin: 0 auto;
   }
 
-  .email {
+  .emailWrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .emailWrapper {
     width: 60%;
     margin-bottom: 0;
     margin-right: 1rem;
   }
 
+  .errorMessage {
+    margin-top: 0.3rem;
+    margin-bottom: 0;
+    text-align: left;
+    padding-left: 1rem;
+  }
+
   .submit {
     width: 40%;
+    align-self: flex-start;
   }
 }
